[package]
name = "magnetar"
version = "0.1.1"
authors = ["Erol Gorancic"]
edition = "2018"

[dependencies]
# sha1 digest
sha1 = "0.6.0"

# logging frontend
log = "0.4.8"

# logging implementation
flexi_logger = "0.15.4"

# for creating tree structures in memory (e.g. filesystem structure)
#indextree = "4.0.0"

chrono = "0.4.11"

#num_cpus = "1.13.0"

# command line argument parsing
[dependencies.clap]
version = "2.33.0"
default-features = false

# SQLite for rust
[dependencies.rusqlite]
version = "0.22.0"
features = ["bundled"] # use bundled SQLite bindings for libsqlite3-sys